# uniGradICON

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: build_and_deploy.yml  gpu-test-action.yml  test_readme_works.yml
demos/: Examples.md
src/: unigradicon.py
src/unigradicon/: __init__.py  atlas.py  unicarl.py
tests/: test_command_arguments.py  test_itk_interface.py  test_requirements_sync.py
training/: dataset.py  dataset_multi.py  train.py  train_multi.py
