[metadata]
name = unigradicon
version = 1.0.3
author = Lin Tian
author_email = lintian@cs.unc.edu
description = a foundation model for medical image registration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/uniGradICON
project_urls =
    Bug Tracker = https://github.com/uncbiag/uniGradICON
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

install_requires = 
    icon_registration>=1.1.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    unigradicon-register = unigradicon:main
    unigradicon-warp = unigradicon:warp_command
